<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2021 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" android:id="@+id/root_layout"
    android:animateLayoutChanges="true">

    <com.forrestguice.support.widget.AppBarLayout
        android:id="@+id/layout_app_menubar"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <com.forrestguice.support.widget.Toolbar
            android:id="@+id/app_menubar" style="?attr/toolbarTheme"
            app:navigationIcon="?attr/icActionWidgets"
            app:title="" />

    </com.forrestguice.support.widget.AppBarLayout>

    <com.forrestguice.support.constraint.ConstraintLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:paddingStart="@dimen/widgetActivity_padding" android:paddingLeft="@dimen/widgetActivity_padding">

        <TextView android:id="@+id/activity_title"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/widgetConfig_title0" android:textSize="?attr/text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/SunsetTimeSettingsGroupTitle" />

        <TextView android:id="@+id/text_appwidgetid"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/check_showPreview"
            android:textStyle="bold" android:textSize="?attr/text_size_xsmall"
            tools:text="1234" tools:ignore="RelativeOverlap,SmallSp" />

        <CheckBox android:id="@+id/check_showPreview"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:button="?attr/checkExpand"
            app:layout_constraintTop_toTopOf="@+id/activity_title" app:layout_constraintBottom_toBottomOf="@+id/activity_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/action_preview" />

    </com.forrestguice.support.constraint.ConstraintLayout>

    <FrameLayout android:id="@+id/previewArea" android:visibility="gone"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="4dp" android:minHeight="80dp" android:layout_gravity="center"
        android:clipChildren="false" />

    <LinearLayout style="@style/SunsetTimeSettingsGroupTray"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/widgetActivity_padding" android:paddingRight="@dimen/widgetActivity_padding"
        android:paddingTop="6dp">

        <ProgressBar android:id="@+id/progress" android:visibility="gone"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminateOnly="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="end"
            android:layout_margin="8dp" android:visibility="gone">

            <Button android:id="@+id/add_button" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/widgetConfig_action_addWidget"
                android:layout_gravity="end"
                style="?android:attr/buttonBarButtonStyle" />

            <Button android:id="@+id/about_button" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/action_about"
                android:layout_gravity="end"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/widgetActivity_padding_inner">

            <LinearLayout android:id="@+id/appwidget_settings_layout"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true" android:focusableInTouchMode="true">

                <LinearLayout android:id="@+id/appwidget_widget_layout"
                    style="@style/SunsetTimeSettingsGroupLayout1"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                    <include layout="@layout/layout_settings_widget" />
                </LinearLayout>

                <LinearLayout android:id="@+id/appwidget_appearance_layout"
                    style="@style/SunsetTimeSettingsGroupLayout1"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                    <include layout="@layout/layout_settings_appearance" />
                </LinearLayout>

                <LinearLayout android:id="@+id/appwidget_general_layout"
                    style="@style/SunsetTimeSettingsGroupLayout1"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                    <include layout="@layout/layout_settings_general" />
                </LinearLayout>

                <LinearLayout android:id="@+id/appwidget_timezone_layout"
                    style="@style/SunsetTimeSettingsGroupLayout1"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                    <include layout="@layout/layout_settings_timezone" />
                </LinearLayout>

                <LinearLayout android:id="@+id/appwidget_location_layout"
                    style="@style/SunsetTimeSettingsGroupLayout1"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <LinearLayout android:id="@+id/settings_group_location_header"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        style="@style/SunsetTimeSettingsGroupHeader">

                        <TextView style="@style/SunsetTimeSettingsGroupTitle"
                            android:id="@+id/appwidget_location_grouptitle"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="@string/location_label" />

                        <View android:layout_width="0dp" android:layout_weight="1" android:layout_height="1dp" android:background="@null" />

                        <CheckBox android:id="@+id/settings_group_location_button"
                            style="@style/SunsetTimeSettingsExpandCheckBox"
                            android:layout_width="wrap_content" android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout android:id="@+id/settings_group_location_content"
                        style="@style/SunsetTimeSettingsGroupContentArea"
                        android:layout_width="match_parent" android:layout_height="wrap_content">

                        <com.forrestguice.suntimeswidget.getfix.LocationConfigView
                            android:id="@+id/appwidget_location_config"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            />
                        <!-- <include layout="@layout/layout_settings_location" /> -->

                        <LinearLayout
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingRight="12dp" android:paddingLeft="12dp" android:paddingTop="@dimen/settingsGroup_padding"
                            android:paddingBottom="5dp">

                            <CheckBox
                                android:id="@+id/appwidget_location_fromapp"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:textSize="?attr/text_size_small" android:text="@string/location_label_fromapp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout android:id="@+id/appwidget_action_layout"
                    style="@style/SunsetTimeSettingsGroupLayout1"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                    <include layout="@layout/layout_settings_action" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>