...


            <Button android:id="@+id/button_defaults" android:visibility="visible"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_gravity="end" android:layout_marginTop="16dp"
                android:text="@string/action_restoreDefaults" />

        </LinearLayout>

    </com.forrestguice.support.constraint.ConstraintLayout>
</ScrollView>
